[package]
name = "rustl8710"
version = "0.1.0"
authors = ["polyfractal <zach@zacharytong.com>"]

[dependencies]
# New version that fixes compilation:
freertos_rs = { git = "https://github.com/hashmismatch/freertos.rs", rev = "f056dcbb357597aa7c8f603b8b7e57c3f7e02a4c" }

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
